force-app/main/default/objects/Campaign__c/fields/Campaign_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Revenue__c</fullName>
    <label>Campaign Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>