force-app/main/default/objects/Campaign__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Health Camp</fullName>
            </value>
            <value>
                <fullName>Field Activity</fullName>
            </value>
            <value>
                <fullName>Corporate Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>