force-app/main/default/objects/Campaign__c/fields/Registered_Leads__c.field-meta.xml
<CustomField>
    <fullName>Registered_Leads__c</fullName>
    <label>Registered Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>