force-app/main/default/objects/Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Budget__c</columns>
    <columns>Actual_Spent__c</columns>
    <columns>Campaign_Revenue__c</columns>
    <columns>Registered_Leads__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>